--- a/humanities.html
+++ b/humanities.html
@@ -157,11 +157,83 @@
     <!-- <div class="row no-gutters slider-text align-items-end"> -->
     <!-- <div class="col-md-9 ftco-animate pb-5"> -->
     <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="home.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
-    <h1 class="mb-0 bread">Humanities</h1>
+    <h1 class="mb-0 bread">School of
+Humanities & Social Sciences</h1>
     <!-- </div> -->
     <!-- </div> -->
     <!-- </div> -->
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="row justify-content-center pb-5 mb-3">
+<div class="col-md-7 heading-section text-center ftco-animate">
+<h2 style="padding-left:200px; margin-top: 90px;">Connect With Us</h2>
+</div>
+</div>
+<div class="row">
+
+<div class="col-md-4 ftco-animate"style="-webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+   margin-left: 280px;">
+<div class="block-7">
+<div class="img" style="background-image: url(images/ravikiran.jpg);height:450px;"></div>
+<div class="text-center p-4" style="width: ;">
+<span class="excerpt d-block"style="text-align: center;">School of
+Humanities & Social Sciences</span>
+<p style="text-align: center;">Humanities</p>
+<p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
+<br>
+<p>The School of Humanities and Social Sciences includes a wide range of disciplines Economics, Psychology, Management, Commerce and English. The school offers doctoral programs in these disciplines. The school runs Masters Program in Psychology. The faculty of school is offering courses in Humanities and Social Sciences to undergraduate and post graduate students of the Institute. These courses are aimed at developing students to become effective business managers in their careers besides inculcating in them an understanding of values, culture and heritage. The School has MOU with the University of Groningen, The Netherlands for Clinical Psychology Program.
+</p><!-- <p>
+Come join us in building the new India!
+  
+</p>
+ -->
+
+
+<a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
+</div>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div id="light" style="margin-left: 290px;">
+          <a class="boxclose" id="boxclose" onclick="lightbox_close();"></a>
+          <!-- <video id="VisaChipCardVideo" width="600" controls>
+              <source src="https://youtu.be/vvCOSclixJE" type="video/mp4"> -->
+         <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/H4ljv2EjPxw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        -->   <!--Browser does not support <video> tag -->
+          </video>
+        </div>
+<!-- <div class="row justify-content-center pb-5 mb-3">
 <div class="col-md-7 heading-section text-center ftco-animate">
 <h2 style="padding-left:200px;">Connect With Us</h2>
 </div>
@@ -194,7 +266,7 @@
 <span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
 
 <a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-</div>
+ --></div>
 </div>
 </div>
 </div>
