--- a/lmtsm.html
+++ b/lmtsm.html
@@ -45,13 +45,12 @@
     </div>
   </nav>
 
-
 <!-- <section class="hero-wrap hero-wrap-2" style="background-image: url('images/hostelm.jpg');" data-stellar-background-ratio="0.5"> -->
 <!-- <div class="overlay"></div> -->
 <!-- <div class="container">
 <div class="row no-gutters slider-text align-items-end">
 <div class="col-md-9 ftco-animate pb-5">
-<p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p>
+<p class="breadcrumbs mb-2"><span class="mr-2"><a href="home.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p>
 <h1 class="mb-0 bread">CSED</h1>
 </div>
 </div>
@@ -157,12 +156,82 @@
   <!-- <div class="container"> -->
     <!-- <div class="row no-gutters slider-text align-items-end"> -->
     <!-- <div class="col-md-9 ftco-animate pb-5"> -->
-    <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
-    <h1 class="mb-0 bread">LM Thapar School of Management</h1>
+    <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="home.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
+    <h1 class="mb-0 bread">TSLAS</h1>
     <!-- </div> -->
     <!-- </div> -->
     <!-- </div> -->
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="row justify-content-center pb-5 mb-3">
+<div class="col-md-7 heading-section text-center ftco-animate">
+<h2 style="padding-left:200px;">Connect With Us</h2>
+</div>
+</div>
+<div class="row">
+
+<div class="col-md-4 ftco-animate"style="-webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+   margin-left: 280px;">
+<div class="block-7">
+<div class="img" style="background-image: url(images/drnair.jpg);height:450px;"></div>
+<div class="text-center p-4" style="width: ;">
+<span class="excerpt d-block"style="text-align: center;">Thapar School of Liberal Arts & Sciences</span>
+<p style="text-align: center;">TSLAS</p>
+<p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
+<br>
+<p>The School of Liberal Arts & Sciences, is the School of New India. Keeping alive the legacy of its name, Thapar Institute of Engineering & Technology pioneers yet again to introduce the progressive program of Liberal Arts & Sciences in Punjab. The forward-thinking philosophy and pedagogy of this latest addition of teaching-learning opportunities created by TIET, presents students with prospects to engage within a choice based system of education that allows them to select varied sets of Majors and Minors to map their journey in higher education. Conceived in close collaboration with the University of Groningen, Netherlands, this unique School offers an inclusive and comprehensive program that will prepare students for deeper learning, unique cross-sectoral specializations, independent thinking, problem solving, and, for ‘everything’ envisaged with jobs of tomorrow. Incidentally, TSLAS’s philosophy stands in direct alignment with the recently introduced National Education Policy of India to be implemented in 2021. This brilliant School of higher learning, TSLAS, is launching this year (2020) and is already set to become one of the top ranking Liberal Arts & Sciences institution in the country. It boasts of a highly qualified faculty base who are internationally accomplished with a wide range of expertise; each of our faculty comes with wide international exposure and acclaim. Housed in the sprawling 250 acre TIET campus in Patiala, TSLAS currently offers BA, BBA & BSc degrees with a diverse range of interesting specializations from cognitive sciences to psychology to philosophy and more. TSLAS prides in its accomplished faculty, international partnerships with universities from across the world and the extensive infrastructure, but it cherishes most its unique pedagogy that presents combinations from across the arts, sciences and technology to create deep learning, global awareness, wisdom and sensitivity. At TSLAS, students will find various opportunities to engage with our partner universities under the student exchange programs and internships. And it also provides innumerable opportunities to interact with scholars, thinkers, philosophers, scientists, designers, industry partners and more.
+</p><p>
+Come join us in building the new India!
+  
+</p>
+
+
+
+<a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
+</div>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div id="light" style="margin-left: 290px;">
+          <a class="boxclose" id="boxclose" onclick="lightbox_close();"></a>
+          <!-- <video id="VisaChipCardVideo" width="600" controls>
+              <source src="https://youtu.be/vvCOSclixJE" type="video/mp4"> -->
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/H4ljv2EjPxw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <!--Browser does not support <video> tag -->
+          </video>
+        </div>
+<!-- <div class="row justify-content-center pb-5 mb-3">
 <div class="col-md-7 heading-section text-center ftco-animate">
 <h2 style="padding-left:200px;">Connect With Us</h2>
 </div>
@@ -170,56 +239,32 @@
 <div class="row">
 <div class="col-md-4 ftco-animate">
 <div class="block-7">
-<div class="img" style="background-image: url(images/LM1.jpg); height: 450px;"></div>
+<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block" style="text-align: center;">Dr. Sandeep Goyal</span>
-<p style="text-align: center;">PGP Head, MBA Program</p>
-<br><br>
+<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
 
-<a href="https://zoom.us/j/97726398272" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-<br>
-<p style="text-align: center;">TIME : 9:30 AM – 10:30 AM</p>
+<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 </div>
 </div>
 </div>
 <div class="col-md-4 ftco-animate">
 <div class="block-7">
-<div class="img" style="background-image: url(images/LMkarminder.jpg); height: 450px;"></div>
+<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block" style="text-align: center;">Dr.Karminder Ghuman</span>
-<p style="text-align: center;">Head, Venture Lab – TIET, Associate Professor, Entrepreneurship and Marketing</p>
+<span class="excerpt d-block" style="text-align: center;">Mr Dipto Barman</span>
 
-<a href="https://zoom.us/j/97726398272" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-<br>
-<p style="text-align: center;">TIME : 10:30 AM – 11:30 AM</p>
+<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 </div>
 </div>
 </div>
 <div class="col-md-4 ftco-animate">
 <div class="block-7">
-<div class="img" style="background-image: url(images/LMankit.jpg); height: 450px;"></div>
+<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block" style="text-align: center;">Dr. Ankit Mahindroo</span>
-<p style="text-align: center;">Chair - Academic Operations</p>
-<br><br>
+<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
 
-<a href="https://zoom.us/j/97726398272" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-<br>
-<p style="text-align: center;">TIME :11:30 AM – 12:30 PM</p>
-</div>
-</div>
-</div>
-<div class="col-md-4 ftco-animate">
-<div class="block-7">
-<div class="img" style="background-image: url(images/LMankush.jpg); height: 450px;"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block" style="text-align: center;">Mr. Ankush Arora</span>
-<p style="text-align: center;">Admissions Team</p>
-
-<a href="https://zoom.us/j/97726398272" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-<br>
-<p style="text-align: center;">TIME : 9:30 AM – 5:00 PM</p>
-</div>
+<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+ --></div>
 </div>
 </div>
 </div>
@@ -227,7 +272,7 @@
 </section>
 
 <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
-<a href="http://lmtsm.thapar.edu/index.php/admissions/mba/programme-overview" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
+<a href="http://tslas.thapar.edu/?_ga=2.167818209.1955838888.1600158014-952579136.1569080336" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
     
 </div>
 
@@ -273,6 +318,7 @@
 <!--             <li><a href="#" class="py-2 d-block">FAQ's</a></li>
             <li><a href="#" class="py-2 d-block">HelpContact</a></li>
  -->          </ul>
+
 
         </div>
         <div class="row mt-5">
