--- a/home.html
+++ b/home.html
@@ -243,8 +243,8 @@
               <img src="images/worker.png" style="width:80%;">
             </div>
             <div class="media-body">
-              <h3 class="heading">LMTSM</h3>
-              <p style="font-weight: bold;">LM Thapar School of Management</p>
+              <h3 class="heading" style="text-align: center;">LMTSM</h3>
+              <p style="font-weight: bold; text-align: center;">LM THAPAR SCHOOL OF MANAGEMENT</p>
               <p></p>
               <p><a href="lmtsm.html" onclick="lightbox_open();" class="btn btn-primary mr-md-4 py-3 px-4"
                   style="margin-top: 90px; margin-left: 55px;">Visit LMTSM<span class="ion-ios-arrow-forward"></span></a></p>
@@ -260,8 +260,9 @@
               <img src="images/science.png" style="width:130%;">
             </div>
             <div class="media-body">
-              <h3 class="heading">TSLAS</h3>
-              <p style="font-weight: bold;">Thapar School of Liberal Arts & Sciences</p>
+              <h3 class="heading" style="text-align: center;">TSLAS</h3>
+              <p style="font-weight: bold; text-align: center;">THAPAR SCHOOL OF LIBERAL ARTS AND SCIENCES</p>
+              <br>
               <p><a href="tslas.html" class="btn btn-primary mr-md-4 py-3 px-4" style="margin-top: 60px; margin-left: 35px;">Visit TASLAS<span
                     class="ion-ios-arrow-forward"></span></a></p>
               <a href="streams.html" class="btn-custom d-flex align-items-center justify-content-center"><span
@@ -276,8 +277,9 @@
               <img src="images/psychology.png" style="width:110%;">
             </div>
             <div class="media-body">
-              <h3 class="heading">School of Humanities</h3>
-              <p style="font-weight: bold;">SCHOOL OF HUMANITIES AND SOCIAL SCIENCES</p>
+              <h3 class="heading" style="text-align: center;">School of Humanities</h3>
+              <p style="font-weight: bold;text-align: center;">SCHOOL OF HUMANITIES AND SOCIAL SCIENCES</p>
+              <br>
               <p><a href="alumni.html" class="btn btn-primary mr-md-3 py-3 px-4" style="margin-top:55px;margin-left: 50px;">View Page<span class="ion-ios-arrow-forward"></span></a></p>
               <a href="humanities.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
@@ -323,14 +325,14 @@
         <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" style="margin-left: 200px;">
           <div class="d-block services text-center">
             <div class="icon d-flex align-items-center justify-content-center">
-              <img src="images/worker.png" style="width:80%;">
+              <img src="images/school.png" style="width:80%;">
             </div>
             <div class="media-body">
               <h3 class="heading" style="text-align: center;">Student Life</h3>
-              <p style="font-weight: bold;text-align: center;">Student life @ TIET</p>
+              <p style="font-weight: bold;text-align: center;">STUDENT LIFE @TIET</p>
               <p></p>
               <p><a href="lmtsm.html" onclick="lightbox_open();" class="btn btn-primary mr-md-4 py-3 px-4"
-                  style="margin-top: 90px; margin-left: 55px;">Visit LMTSM<span class="ion-ios-arrow-forward"></span></a></p>
+                  style="margin-top: 90px; margin-left: 55px;">Have a look<span class="ion-ios-arrow-forward"></span></a></p>
               <a href="lmtsm.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
             </div>
@@ -341,12 +343,12 @@
         <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" >
           <div class="d-block services text-center">
             <div class="icon d-flex align-items-center justify-content-center">
-              <img src="images/psychology.png" style="width:110%;">
+              <img src="images/question.png" style="width:110%;">
             </div>
             <div class="media-body">
-              <h3 class="heading">School of Humanities</h3>
-              <p style="font-weight: bold;">SCHOOL OF HUMANITIES AND SOCIAL SCIENCES</p>
-              <p><a href="alumni.html" class="btn btn-primary mr-md-3 py-3 px-4" style="margin-top:55px;margin-left: 50px;">View Page<span class="ion-ios-arrow-forward"></span></a></p>
+              <h3 class="heading" style="text-align: center;">Admission related Queries</h3>
+              <p style="font-weight: bold;text-align: center;">GET YOUR QUERIES SOLVED</p>
+              <p><a href="alumni.html" class="btn btn-primary mr-md-3 py-3 px-4" style="margin-top:55px;margin-left: 50px;">Solve Queries<span class="ion-ios-arrow-forward"></span></a></p>
               <a href="humanities.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
             </div>
