--- a/electrical.html
+++ b/electrical.html
@@ -276,7 +276,7 @@ Come join us in building the new India!
 </section>
 
 <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
-<a href="http://tslas.thapar.edu/?_ga=2.167818209.1955838888.1600158014-952579136.1569080336" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
+<a href="http://www.thapar.edu/academics/departments/electrical-instrumentation-engineering/mou" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
     
 </div>
 
