--- a/lmtsm.html
+++ b/lmtsm.html
@@ -157,7 +157,7 @@
     <!-- <div class="row no-gutters slider-text align-items-end"> -->
     <!-- <div class="col-md-9 ftco-animate pb-5"> -->
     <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="home.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
-    <h1 class="mb-0 bread">TSLAS</h1>
+    <h1 class="mb-0 bread">LMTSM</h1>
     <!-- </div> -->
     <!-- </div> -->
     <!-- </div> -->
@@ -188,16 +188,17 @@
 <div class="block-7">
 <div class="img" style="background-image: url(images/drnair.jpg);height:450px;"></div>
 <div class="text-center p-4" style="width: ;">
-<span class="excerpt d-block"style="text-align: center;">Thapar School of Liberal Arts & Sciences</span>
-<p style="text-align: center;">TSLAS</p>
+<span class="excerpt d-block"style="text-align: center;">LM Thapar School of Management
+</span>
+<p style="text-align: center;">LMTSM</p>
 <p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
 <br>
-<p>The School of Liberal Arts & Sciences, is the School of New India. Keeping alive the legacy of its name, Thapar Institute of Engineering & Technology pioneers yet again to introduce the progressive program of Liberal Arts & Sciences in Punjab. The forward-thinking philosophy and pedagogy of this latest addition of teaching-learning opportunities created by TIET, presents students with prospects to engage within a choice based system of education that allows them to select varied sets of Majors and Minors to map their journey in higher education. Conceived in close collaboration with the University of Groningen, Netherlands, this unique School offers an inclusive and comprehensive program that will prepare students for deeper learning, unique cross-sectoral specializations, independent thinking, problem solving, and, for ‘everything’ envisaged with jobs of tomorrow. Incidentally, TSLAS’s philosophy stands in direct alignment with the recently introduced National Education Policy of India to be implemented in 2021. This brilliant School of higher learning, TSLAS, is launching this year (2020) and is already set to become one of the top ranking Liberal Arts & Sciences institution in the country. It boasts of a highly qualified faculty base who are internationally accomplished with a wide range of expertise; each of our faculty comes with wide international exposure and acclaim. Housed in the sprawling 250 acre TIET campus in Patiala, TSLAS currently offers BA, BBA & BSc degrees with a diverse range of interesting specializations from cognitive sciences to psychology to philosophy and more. TSLAS prides in its accomplished faculty, international partnerships with universities from across the world and the extensive infrastructure, but it cherishes most its unique pedagogy that presents combinations from across the arts, sciences and technology to create deep learning, global awareness, wisdom and sensitivity. At TSLAS, students will find various opportunities to engage with our partner universities under the student exchange programs and internships. And it also provides innumerable opportunities to interact with scholars, thinkers, philosophers, scientists, designers, industry partners and more.
+<p>LM Thapar School of Management (LMTSM) was established on July 23, 2007 in the erstwhile princely state of Patiala (Punjab, India),under the flagship of Thapar Institute of Engineering and Technology (Deemed-to be-University), a 61 year old academic institution. Incepted in the fond memory of Late Shri. Lalit Mohan Thapar(October 27, 1930 - January 17, 2007), founder of the Thapar Group of companies, LMTSM is a business education pioneer in Northern India, transform graduates into professionals with a unique platform of global exposure with experiential learning . The school of management is led by Dr. Padmakumar Nair, Director-LMTSM, who is enriched with an experience of more than 32 years and formerly worked as Clinical Professor and Academic Director at The Leadership Center, SOM, University of Texas,Dallas. LMTSM was shifted in 2013 to its present state of the art campus in Dera Bassi, Punjab,India.</p>
+<p>
+The institute is organized into 9 academic units with 6 centers of excellence. In addition to the core courses and doctoral programs, there are various open electives which are offered to students cater to the dynamic business trends.
 </p><p>
-Come join us in building the new India!
-  
+The tech-savvy campus is set on a sprawling area of 33 acres. With students from all across India, LMTSM has a residential facility for over 500 students. The graduates run over 30 clubs reinforcing their academic, sports and cultural pursuits.
 </p>
-
 
 
 <a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
@@ -227,8 +228,8 @@ Come join us in building the new India!
           <a class="boxclose" id="boxclose" onclick="lightbox_close();"></a>
           <!-- <video id="VisaChipCardVideo" width="600" controls>
               <source src="https://youtu.be/vvCOSclixJE" type="video/mp4"> -->
-         <iframe width="560" height="315" src="https://www.youtube.com/embed/H4ljv2EjPxw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <!--Browser does not support <video> tag -->
+       <!--   <iframe width="560" height="315" src="https://www.youtube.com/embed/H4ljv2EjPxw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        -->   <!--Browser does not support <video> tag -->
           </video>
         </div>
 <!-- <div class="row justify-content-center pb-5 mb-3">
@@ -272,7 +273,7 @@ Come join us in building the new India!
 </section>
 
 <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
-<a href="http://tslas.thapar.edu/?_ga=2.167818209.1955838888.1600158014-952579136.1569080336" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
+<a href="http://lmtsom.thapar.edu/" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
     
 </div>
 
