--- a/home.html
+++ b/home.html
@@ -168,8 +168,8 @@
             </div>
             <div class="media-body">
               <h3 class="heading">Academic Units</h3>
-              <p style="font-weight: bold;">VARIOUS ACADEMIC STREAMS</p>
-              <p><a href="streams.html" class="btn btn-primary mr-md-4 py-3 px-4" style="margin-top: 65px;">Academic Units<span
+              <p style="font-weight: bold;">VARIOUS ENGINEERING STREAMS</p>
+              <p><a href="streams.html" class="btn btn-primary mr-md-4 py-3 px-4" style="margin-top: 65px;">Streams<span
                     class="ion-ios-arrow-forward"></span></a></p>
               <a href="streams.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
