--- a/home.html
+++ b/home.html
@@ -167,8 +167,8 @@
               <img src="images/es.png" style="width:130%;">
             </div>
             <div class="media-body">
-              <h3 class="heading">Academic Units</h3>
-              <p style="font-weight: bold;">VARIOUS ENGINEERING STREAMS</p>
+              <h3 class="heading">Engineering Streams</h3>
+              <p style="font-weight: bold;">Click here to Know more about various Engineering Departments of TIET</p>
               <p><a href="streams.html" class="btn btn-primary mr-md-4 py-3 px-4" style="margin-top: 65px;">Streams<span
                     class="ion-ios-arrow-forward"></span></a></p>
               <a href="streams.html" class="btn-custom d-flex align-items-center justify-content-center"><span
