--- a/home.html
+++ b/home.html
@@ -150,7 +150,7 @@
             </div>
             <div class="media-body">
               <h3 class="heading">Explore Thapar</h3>
-              <p style="font-weight: bold;">Introductory Video</p>
+              <p style="font-weight: bold;">INTRODUCTORY VIDEO</p>
               <p></p>
               <p><a href="#" onclick="lightbox_open();" class="btn btn-primary mr-md-4 py-3 px-4"
                   style="margin-top: 90px;">Watch
@@ -265,7 +265,7 @@
               <br>
               <p><a href="tslas.html" class="btn btn-primary mr-md-4 py-3 px-4" style="margin-top: 60px; margin-left: 35px;">Visit TASLAS<span
                     class="ion-ios-arrow-forward"></span></a></p>
-              <a href="streams.html" class="btn-custom d-flex align-items-center justify-content-center"><span
+              <a href="tslas.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
 
             </div>
@@ -280,7 +280,7 @@
               <h3 class="heading" style="text-align: center;">School of Humanities</h3>
               <p style="font-weight: bold;text-align: center;">SCHOOL OF HUMANITIES AND SOCIAL SCIENCES</p>
               <br>
-              <p><a href="alumni.html" class="btn btn-primary mr-md-3 py-3 px-4" style="margin-top:55px;margin-left: 50px;">View Page<span class="ion-ios-arrow-forward"></span></a></p>
+              <p><a href="humanities.html" class="btn btn-primary mr-md-3 py-3 px-4" style="margin-top:55px;margin-left: 50px;">View Page<span class="ion-ios-arrow-forward"></span></a></p>
               <a href="humanities.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
             </div>
