--- a/streams.html
+++ b/streams.html
@@ -224,7 +224,7 @@
 
 
 
-<div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" style="margin-top: 70px;">
+<!--<div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" style="margin-top: 70px;">
           <div class="d-block services text-center">
             <div class="icon d-flex align-items-center justify-content-center">
               <img class="logosize" src="images/worker.png">
@@ -254,7 +254,7 @@ of Liberal Arts & Sciences </p>
             </div>
           </div>
         </div>
-</div>
+</div>-->
         <!-- <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
 <div class="d-block services text-center">
 <div class="icon d-flex align-items-center justify-content-center">
@@ -270,7 +270,7 @@ of Liberal Arts & Sciences </p>
 </div>
  -->
 
- <div class="row mt-5 pt-4">
+ <!--<div class="row mt-5 pt-4">
         <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" style="margin-top: 70px;">
           <div class="d-block services text-center">
             <div class="icon d-flex align-items-center justify-content-center">
@@ -284,7 +284,7 @@ Humanities & Social Sciences, TIET </p>
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
             </div>
           </div>
-        </div>
+        </div>-->
 
 
 
