--- a/alumni.html
+++ b/alumni.html
@@ -323,15 +323,16 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <div class="col-md-6 col-lg-3 ftco-animate">
 <div class="staff">
 <div class="img-wrap d-flex align-items-stretch">
-<div class="img align-self-stretch" style="background-image: url(images/aarti.jpeg);"></div>
+<div class="img align-self-stretch" style="background-image: url(images/alumni/capt.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
-<h3>Aarti </h3>
-<span class="position mb-2">2010, Electronics instrumentation and control Engineer</span>
+<h3>Capt Rajiv Sood, veteran</h3>
+<span class="position mb-2">1980, Electronics and Communication Engineer</span>
 
 <div class="faded">
-<p>Associate - Industry Leader (Automotive, Manufacturing and Engineering Design Services) - Career Business. Mercer Consulting India Private Limited</p>
-<p>Alumnus MBA - HR, SCMHRD Pune</p>
+<p> Liaison Officer to Amrita Vishwa Vidyapeetham University </p>
+<p>Had served 36 Years in Indian Navy </p>
+<br><br><br>
 
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000">   </span>  </p>
@@ -359,7 +360,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <div class="faded">
 <p>Distinguished Scientist (Retired from BARC after 42 years of service )</p>
 <p>Had been a Fellow, Indian National Academy of engineers and President Robotics Society of India</p>
-<br><br><br>
+<br><br>
 
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM;2:00-3:00 PM  </span>  </p>
