--- a/dosa.html
+++ b/dosa.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Academic Units</title>
+  <title>Student Life</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap"
@@ -44,6 +44,7 @@
       </div>
     </div>
   </nav>
+
 
 <!-- <section class="hero-wrap hero-wrap-2" style="background-image: url('images/hostelm.jpg');" data-stellar-background-ratio="0.5"> -->
 <!-- <div class="overlay"></div> -->
@@ -113,7 +114,7 @@
 <div class="row" style="padding-top: 50px;">
 <div class="col-md-6 services-2 w-100 d-flex">
 <div class="icon d-flex align-items-center justify-content-center">
-  <span class="fal fa-users"></span>
+	<span class="fal fa-users"></span>
  -->
 <!-- </div> -->
 <!-- <div class="text pl-3">
@@ -123,7 +124,7 @@
 </div>
 <div class="col-md-6 services-2 w-100 d-flex">
 <div class="icon d-flex align-items-center justify-content-center">
-  <span class="fal fa-building"></span>
+	<span class="fal fa-building"></span>
 
 </div>
 <div class="text pl-3">
@@ -157,7 +158,7 @@
     <!-- <div class="row no-gutters slider-text align-items-end"> -->
     <!-- <div class="col-md-9 ftco-animate pb-5"> -->
     <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="home.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
-    <h1 class="mb-0 bread">CHED</h1>
+    <h1 class="mb-0 bread">	Dean of Student Affairs</h1>
     <!-- </div> -->
     <!-- </div> -->
     <!-- </div> -->
@@ -174,30 +175,30 @@
     max-width: 70%;
    margin-left: 200px;">
 <div class="block-7">
-<div class="img" style="background-image: url(images/faculty/chemical.JPG);height:450px;"></div>
+<div class="img" style="background-image: url(images/faculty/dosa.jpeg);height:450px;"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Chemical Engineering</span>
-<p style="text-align: center;">CHED</p>
+<span class="excerpt d-block"style="text-align: center;">	Dean of Student Affairs</span>
+<p style="text-align: center;">	Dean of Student Affairs</p>
 <p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
 <br>
-<p>The program offers courses which have a mix of theoretical and practical aspects through classroom teaching and projects, field interactions and industrial training, capstone projects and experiential learning. In addition, the campus offers an outstanding array of events, activities and other multifarious extracurricular and co-curricular programs to enrich your academic experience and make you a rounded personality.In addition, guiding you through your journey to success are various entrepreneurial ventures and start-ups incubated by your peers at TIET.
+<p>The focus of the department is on state of the art projects done by our BE and ME students, excellent teaching learning process, better alumni relations, good industry attachment program through project semester and outcome based education.At the undergraduate level, the Department lays emphasis on Software Engineering, Algorithm Analysis and Design, Operating Systems, Computer Graphics, Database and information Systems Engineering and Networking Technologies. The Department provides exposure to emerging technologies as well as futuristic technologies like High Performance Computing, Computer Animation and Gaming, Machine Learning and Data Analytics, Information and Cyber Security and Software Engineering.
 
 </p>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
+
+<a href="https://tiet.zoom.us/my/msingh/" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 </div>
 </div>
 </div>
+
 </div>
 </div>
 </section>
 
 <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
-<a href="http://ched.thapar.edu/" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
-  
+<a href="http://csed.thapar.edu/" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
+	
 </div>
-
-
 
 
 
