--- a/electrical.html
+++ b/electrical.html
@@ -31,10 +31,10 @@
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
-          <li class="nav-item active"><a href="streams.html" class="nav-link">Academic Units</a></li>
+          <li class="nav-item active"><a href="streams.html" class="nav-link">Engineering Streams</a></li>
 
           <li class="nav-item"><a href="alumni.html" class="nav-link">Sessions with our Alumni</a></li>
-          <li class="nav-item"><a href="placement.html" class="nav-link">Placements</a></li>
+          <li class="nav-item"><a href="placement.html" class="nav-link">IEP Cell</a></li>
 
 
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
@@ -187,7 +187,7 @@
    margin-left: 200px;">
 <div class="block-7">
 <div class="img" style="background-image: url(images/EIC.jpg);height:450px;"></div>
-<div class="text-center p-4" style="width: ;">
+<div class="text-center p-4" style="width: ">
 <span class="excerpt d-block"style="text-align: center;">Electrical & Instrumentation</span>
 <p style="text-align: center;">ELE & EIC</p>
 <p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
