--- a/home.html
+++ b/home.html
@@ -102,10 +102,10 @@
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active"><a href="home.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="streams.html" class="nav-link">Academic Units</a></li>
+          <li class="nav-item"><a href="streams.html" class="nav-link">Engineering Streams</a></li>
 
           <li class="nav-item"><a href="alumni.html" class="nav-link">Sessions with our Alumni</a></li>
-          <li class="nav-item"><a href="placement.html" class="nav-link">Placements</a></li>
+          <li class="nav-item"><a href="placement.html" class="nav-link">IEP Cell</a></li>
 
 
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
@@ -331,9 +331,9 @@
               <h3 class="heading" style="text-align: center;">Student Life</h3>
               <p style="font-weight: bold;text-align: center;">STUDENT LIFE @TIET</p>
               <p></p>
-              <p><a href="lmtsm.html" onclick="lightbox_open();" class="btn btn-primary mr-md-4 py-3 px-4"
+              <p><a href="dosa.html" onclick="lightbox_open();" class="btn btn-primary mr-md-4 py-3 px-4"
                   style="margin-top: 90px; margin-left: 55px;">Have a look<span class="ion-ios-arrow-forward"></span></a></p>
-              <a href="lmtsm.html" class="btn-custom d-flex align-items-center justify-content-center"><span
+              <a href="dosa.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
             </div>
           </div>
@@ -348,8 +348,8 @@
             <div class="media-body">
               <h3 class="heading" style="text-align: center;">Admission related Queries</h3>
               <p style="font-weight: bold;text-align: center;">GET YOUR QUERIES SOLVED</p>
-              <p><a href="alumni.html" class="btn btn-primary mr-md-3 py-3 px-4" style="margin-top:55px;margin-left: 50px;">Solve Queries<span class="ion-ios-arrow-forward"></span></a></p>
-              <a href="humanities.html" class="btn-custom d-flex align-items-center justify-content-center"><span
+              <p><a href="doaa.html" class="btn btn-primary mr-md-3 py-3 px-4" style="margin-top:55px;margin-left: 50px;">Solve Queries<span class="ion-ios-arrow-forward"></span></a></p>
+              <a href="doaa.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
             </div>
           </div>
