--- a/alumni.html
+++ b/alumni.html
@@ -69,7 +69,7 @@
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000">12:00-1:00 PM</span></p>
 <br>
-<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -93,7 +93,7 @@
 <br><br><br><br><br><br>
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME:<span style="color:#640000"> 10:00-11:00 AM ; 3:00-4:00 PM </span> </p>
-<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -122,7 +122,7 @@
   
   <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 1:00-2:00 PM </span>  </p>
-<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -147,7 +147,7 @@
 <br><br><br>
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM; 3:00-4:00 PM </span>  </p>
-<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -173,7 +173,7 @@
   <br>
   <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM ; 2:00-3:00 PM  </span> </p>
-<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -202,7 +202,7 @@ Chief Technology Officer, Tata Communications Lanka Ltd
 
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM; 2:00-3:00 PM </span>  </p>
-<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -228,7 +228,7 @@ Chief Technology Officer, Tata Communications Lanka Ltd
 
   <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM; 4:00-5:00 PM </span> </p>
-<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -254,7 +254,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <br>
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 12:00-1:00 PM;2:00-3:00 PM </span>  </p>
-<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
@@ -281,7 +281,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 4:00-5:00 PM  </span>  </p>
-<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -308,7 +308,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM </span>  </p>
-<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -336,7 +336,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000">   </span>  </p>
-<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -364,7 +364,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM;2:00-3:00 PM  </span>  </p>
-<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -391,7 +391,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM; 4:00-5:00 PM  </span>  </p>
-<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -423,7 +423,7 @@ Author of40 books including 26 on Aviation and Space subjects.
 
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000">  1:00-2:00 PM  </span>  </p>
-<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -451,7 +451,7 @@ Deutsche Bank</p>
 <br><br><br><br><br><br><br><br><br><br><br><br><br>
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 1:00-2:00 PM </span>  </p>
-<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -477,7 +477,7 @@ Deutsche Bank</p>
 <br><br><br><br><br><br><br><br><br><br><br><br><br>
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 3:00-4:00 PM </span>  </p>
-<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
@@ -503,7 +503,7 @@ Deutsche Bank</p>
 <br><br><br>
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 3:00-4:00 PM </span>  </p>
-<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
 <ul class="ftco-social text-center">
 <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
